...
        bottomNavigationBar: NavigationBar(
          height: 65,
          elevation: 0,
          selectedIndex: invitation ?? widget.navigationShell.currentIndex,
          destinations: const [
            NavigationDestination(label: 'Accueil', icon: Icon(Iconsax.home)),
            NavigationDestination(label: 'Panier', icon: _CartIcon()),
            NavigationDestination(label: 'Commandes', icon: Icon(Iconsax.shop)),
            NavigationDestination(label: 'Profil', icon: Icon(Iconsax.user)),
          ],
          onDestinationSelected: _goBranch,
        ),
      ),
...
